@@ -1086,6 +1086,25 @@ def test_element_any_type():
     item = container_elm.parse(node.getchildren()[0], schema)
     assert item.something == 'bar'
 
+    container_elm = schema.get_element('{http://tests.python-zeep.org/}container')
+    obj = container_elm(something=xsd.AnyObject(xsd.String(), 'bar'))
+
+    node = etree.Element('document')
+    container_elm.render(node, obj)
+    expected = """
+        <document>
+            <ns0:container xmlns:ns0="http://tests.python-zeep.org/">
+                <ns0:something
+                    xmlns:xs="http://www.w3.org/2001/XMLSchema"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:type="xs:string">bar</ns0:something>
+            </ns0:container>
+        </document>
+    """
+    assert_nodes_equal(expected, node)
+    item = container_elm.parse(node.getchildren()[0], schema)
+    assert item.something == 'bar'
+
 
 def test_any_in_nested_sequence():
     schema = xsd.Schema(load_xml("""
