@@ -1,6 +1,7 @@
 0.20.0 (unreleased)
 -------------------
  - Fix parsing empty soap response (#223)
+ - Better support for xsd:anyType, by re-using the xsd.AnyObject (#229)
 
 
 0.19.0 (2016-10-18)
